--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.timeline": "1.6.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
+    "com.unity.xr.arcore": "4.2.8",
     "com.unity.xr.interaction.toolkit": "2.3.2",
     "com.unity.xr.management": "4.3.3",
     "com.unity.xr.oculus": "3.3.0",
